Updating the Openfreight.html page for showcasing

--- a/platforms/openfreight.html
+++ b/platforms/openfreight.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% include header.html %}
-{% include hero-featured.html title="E-Commerce" description="Description of the E-Commerce Page" %}
+{% include hero-featured.html title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi non egestas lacus, vitae sollicitudin velit." description="Sed eu urna quis dui pellentesque tempor ut sed nulla. Sed pellentesque dui at odio suscipit ultrices. Donec tempor efficitur ligula, at lobortis neque tempus eu. Sed sed vehicula dolor, ac rhoncus odio." image="/assets/images/tig/mockup-iphone6.png" %}
 
 
 <!-- Intro Text -->
