adding all blank pages

--- a/industry/case-studies.html
+++ b/industry/case-studies.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% include header.html %}
-{% include hero-small.html title="E-Commerce" description="Sed eu urna quis dui pellentesque tempor ut sed nulla. Sed pellentesque dui at odio suscipit ultrices." %}
+{% include hero-small.html title="Case Studies" description="Sed eu urna quis dui pellentesque tempor ut sed nulla. Sed pellentesque dui at odio suscipit ultrices." %}
 
 <!-- Hi developer... grab blocks from this file and then remove this include -->
 {% include default-content.html %}
