Adding hero classes for Featured Headings

--- a/platforms/track-my-parcel.html
+++ b/platforms/track-my-parcel.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% include header.html %}
-{% include hero-featured.html title="Track My Parcel" description="Sed eu urna quis dui pellentesque tempor ut sed nulla. Sed pellentesque dui at odio suscipit ultrices. Donec tempor efficitur ligula, at lobortis neque tempus eu. Sed sed vehicula dolor, ac rhoncus odio." image="/assets/images/tig/mockup-iphone6.png" %}
+{% include hero-featured.html heroClass="is-primary is-bold" title="Track My Parcel" description="Sed eu urna quis dui pellentesque tempor ut sed nulla. Sed pellentesque dui at odio suscipit ultrices. Donec tempor efficitur ligula, at lobortis neque tempus eu. Sed sed vehicula dolor, ac rhoncus odio." image="/assets/images/tig/mockup-iphone6.png" %}
 
 <!-- Hi developer... grab blocks from this file and then remove this include -->
 {% include default-content.html %}
